skattepengeserver/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario
  namespace: erikandreasklokk
spec:
  type: ClusterIP
  selector:
    app: mario
  ports:
    - name: web
      port: 80
      targetPort: http
