skattepengeserver/http-route.yaml
# http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mario
  namespace: erikandreasklokk
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - mario-erikandreasklokk.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mario
          port: 80
